# MultiplayerSpaceGame

./: .gitignore
engine/: CMakeLists.txt
engine/game/: CMakeLists.txt  console.cc  console.h  dead_rec.cc  dead_rec.h  laser.cc  laser.h  network.cc  network.h  spaceship.cc  spaceship.h
projects/client/: CMakeLists.txt
projects/client/code/: client_app.cc  client_app.h
projects/server/: CMakeLists.txt
projects/server/code/: server_app.cc  server_app.h
projects/spacegame/: CMakeLists.txt  proto.fbs
projects/spacegame/code/: console.h  laser.cc  main.cc  spacegameapp.cc  spacegameapp.h  spaceship.cc  spaceship.h
